[package]
name = "crab_nat"
version = "0.6.3"
edition = "2021"
authors = ["Ryan Andersen <ryco117@gmail.com>"]
description = "A library providing a pure Rust implementation of a client for both the NAT Port Mapping Protocol (NAT-PMP) and the Port Control Protocol (PCP)."
license = "MIT"
repository = "https://github.com/ryco117/crab_nat"

[dependencies]
bytes = "1.6.0"
displaydoc = "0.2.4"
num_enum = "0.7.2"
rand = "0.8.5"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["io-util", "net", "time"] }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
default-net = "0.22"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[[example]]
name = "client"
required-features = ["tracing"]
