[package]
name = "crab_nat"
version = "0.7.4"
edition = "2021"
authors = ["Ryan Andersen <ryco117@gmail.com>"]
description = "A library providing a pure Rust implementation of a client for both the NAT Port Mapping Protocol (NAT-PMP) and the Port Control Protocol (PCP)."
license = "MIT"
repository = "https://github.com/ryco117/crab_nat"

[dependencies]
bytes = "1.10.1"
displaydoc = "0.2.5"
num_enum = "0.7.5"
rand = "0.10.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "net", "time"] }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
netdev = "0.42.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.20"

[[example]]
name = "client"
required-features = ["tracing"]
